--- a/Hangman-p5/index.html
+++ b/Hangman-p5/index.html
@@ -3,15 +3,17 @@
 <head>
 	<title>Fruit Hangman</title>
 <link rel="stylesheet" type="text/css" href="<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+<link rel="stylesheet" type="text/css" href="styles.css">
 
 </head>
-<body>
+<body>,<center>
 <div class='container'>
 <div class ='jumbotron'>
 <div class='container'>
-<h1>Fruits Hangman</h1>
-<h2>Guess the fruit</h2>
-<small> click any leter to begin..</small>
+<h1 style= "color: white">Fruit Hangman</h1>
+<h2 style= "color: white">Guess the fruit</h2>
+<small style= "color: white"> click any leter to begin..</small>
+
 </div>
 </div>	
 
@@ -55,7 +57,14 @@
 </div>
 </div>
 
-<script type="text/javascript"></script>
+<script>
+	window.onload = function() {  // reload file every second
+		setInterval(function() { location.reload(); } , 1000);
+	};
+</script>
+
+<script type="logic.js"></script>
 
 </body>
+</center>
 </html>
